2015-03-29 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-view-entries.c,
	* src/ui/ofa-view-entries.ui:
	- let the currency column visibility be toggled.

	Review the settlement UI (todo #774, #775).

	* src/api/ofo-entry.h,
	* src/core/ofo-entry.c: new ofo_entry_get_settlement_stamp() method.

	* src/ui/ofa-settlement.c,
	* src/ui/ofa-settlement.ui:
	- move the settle/unsettle buttons to the right (todo #774)
	- all the footer line has one same color (todo #775).

	* src/ui/ofa-guided-input-bin.c: protect against closing the main
	window while the focus is in date or amount entry (because focus-out
	generated event will trigger the validation function which will want
	access the dossier, which is already finalized at this time).

	Do not make OK/Validate GuidedInput buttons sensitive while all
	amounts are zero (todo #777).

	* src/core/ofs-ope.c: count generate-able entries.

	Review the reconciliation UI.

	* src/ui/ofa-date-filter-bin.c,
	* src/ui/ofa-date-filter-bin.h:
	new ofa_date_filter_bin_get_from_prompt() method.

	* src/ui/ofa-reconciliation.ui: new file.

	* src/ui/Makefile.am,
	* src/ui/ofa-reconciliation.c: updated accordingly.

	Update entries import/export to DBMS v25.

	* misc/convert/ebp_entries.pl: add missing fields.

	* src/api/ofo-concil.h,
	* src/core/ofo-concil.c:
	- ofo_concil_set_user(),
	- ofo_concil_set_stamp(): methods are now public.

	* src/core/ofa-iconcil.c,
	* src/core/ofa-iconcil.h: new ofa_iconcil_new_concil_ex() method.

	* src/core/ofo-entry.c: updated accordingly.

2015-03-28 Pierre Wieser <pwieser@trychlos.org>

	Have my_collate() function (todo #770).

	* src/api/my-utils.h,
	* src/core/my-utils.c: new my_collate() function.

	* src/core/ofo-account.c,
	* src/ui/ofa-reconciliation.c,
	* src/ui/ofa-settlement.c,
	* src/ui/ofa-view-entries.c: updated accordingly.

	Have an OPENBOOK_API_ prefix in all api headers (todo #762).

	* src/api/my-date.h,
	* src/api/my-double.h,
	* src/api/my-utils.h,
	* src/api/ofa-box.h,